# PeriCode

./: .gitignore  PLAN.md  PROGRESS.md  PROMPT.md  RALPH-INSTRUCTIONS.md  RALPH-LOOP-REQUIREMENTS.md  README.en.md  README.md  eslint.config.mjs  forge.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts  vite.main.config.ts  vite.renderer.config.ts  vitest.config.ts
.github/: pull_request_template.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: agents.rs  automations.rs  export.rs  git.rs  images.rs  mod.rs  notes.rs  projects.rs  providers.rs  settings.rs  shell_commands.rs  skills.rs  status.rs  terminal.rs  threads.rs  worktrees.rs
src-tauri/src/db/: mod.rs  models.rs  schema.rs
src-tauri/src/db/queries/: automations.rs  messages.rs  mod.rs  model_usage.rs  notes.rs  projects.rs  settings.rs  skills.rs  threads.rs
src-tauri/src/providers/: claude_adapter.rs  copilot_adapter.rs  copilot_auth.rs  mod.rs  tool_executor.rs  types.rs
src-tauri/src/providers/tools/: bash.rs  edit.rs  glob.rs  grep.rs  mod.rs  read.rs  write.rs
src-tauri/src/services/: agent_orchestrator.rs  automation_executor.rs  automation_scheduler.rs  claude_cli.rs  export_service.rs  mod.rs  notification_service.rs  project_manager.rs  session_registry.rs  skill_parser.rs  skills_engine.rs  terminal_service.rs  worktree_manager.rs
src-tauri/src/utils/: logger.rs  mod.rs  model_pricing.rs  paths.rs
(+110 files in other folders)
