[package]
name = "pericode"
version = "0.8.0"
edition = "2021"
description = "PeriCode - AI-powered coding assistant"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
git2 = "0.19"
portable-pty = "0.8"
globwalk = "0.9"
ignore = "0.4"
regex = "1"
parking_lot = "0.12"
futures = "0.3"
tokio-stream = "0.1"
async-trait = "0.1"
notify = "6"
notify-debouncer-mini = "0.4"
cron = "0.12"
tokio-cron-scheduler = "0.11"
base64 = "0.22"
dirs = "5"
once_cell = "1"
